<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kszr.midiplayer.MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- App Title -->
    <TextView
        android:id="@+id/title"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/h1"
        android:fontFamily="sans-serif-light"
        android:text="@string/app_name"/>

    <!-- So far just the open button -->
    <LinearLayout
        android:id="@+id/text_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title">

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_open" />

    </LinearLayout>

    <!-- Playback Buttons -->
    <LinearLayout
        android:id="@+id/playback_buttons"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_buttons"
        android:layout_centerHorizontal="true">

        <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
            android:contentDescription="@string/button_back_to_start_description"
            android:id="@+id/button_to_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/rewindtostart"
            style="?android:attr/buttonStyleSmall" />

        <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
            android:contentDescription="@string/button_play_description"
            android:id="@+id/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:layout_toRightOf="@+id/button_to_start"
            android:src="@drawable/play"
            style="?android:attr/buttonStyleSmall" />

        <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
            android:contentDescription="@string/button_pause_description"
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:layout_toRightOf="@+id/button_play"
            android:src="@drawable/pause"
            style="?android:attr/buttonStyleSmall" />

        <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
            android:contentDescription="@string/button_stop_description"
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:layout_toRightOf="@+id/button_pause"
            android:src="@drawable/stop"
            style="?android:attr/buttonStyleSmall" />

        <ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
            android:contentDescription="@string/button_forward_to_end_description"
            android:id="@+id/button_to_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:layout_toRightOf="@+id/button_stop"
            android:src="@drawable/skiptoend"
            style="?android:attr/buttonStyleSmall" />

    </LinearLayout>

    <!-- Shows playback progress as a progress bar -->
    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:layout_below="@+id/playback_buttons"
        android:indeterminate="false"
        android:visibility="visible" />

    <!-- Shows playback progress in terms of time -->
    <TextView
        android:id="@+id/playback_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:layout_below="@+id/progress_bar"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/h2"
        android:text="@string/default_time"/>

    <!-- Miscellaneous Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playback_time"
        android:layout_centerHorizontal="true">

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_program"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_program" />

    </LinearLayout>

</RelativeLayout>
